updates(navigation): fixed logo on small devices.

--- a/components/navigation/navigation.sass
+++ b/components/navigation/navigation.sass
@@ -26,6 +26,9 @@
   &__home
     @include nexus
       height: 45%
+    @include phone-lg
+      margin-right: unset
+      height: 40%
     display: flex
     align-items: center
     margin-right: 2rem
